# header-hunter

./: .gitignore  README.md  pyproject.toml
header_hunter/: cli.py  sniff.py  store.py
tests/: samples.py  test_sniff.py  test_store.py
