[tool.poetry]
name = "header-hunter"
version = "0.2.0"
description = "Python library for hunting HTTP headers"
authors = [
  "Aleksandr Vinokurov <aleksandr.vin@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aleksandr-vin/header-hunter"


[tool.poetry.dependencies]
python = "^3.10"
tk = "^0.1.0"


[tool.poetry.scripts]
"header-hunter" = "header_hunter.cli:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aleksandr-vin/header-hunter/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra --cov=header_hunter"
testpaths = [
    "tests",
]